ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls: 
  - hosts: 
    - "myvivi.tk"
    secretName: tls-secret
  rules: 
  - host: "myvivi.tk"
    http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service: 
            name: frontend
            port: 
              number: 80
      - path: /api/?(.*)
        pathType: Prefix
        backend: 
          service: 
            name: backend
            port: 
              number: 3000
